--- a/package.json
+++ b/package.json
@@ -24,7 +24,11 @@
   "author": "Kristian Mandrup <kmandrup@gmail.com>",
   "license": "ISC",
   "dependencies": {
-    "gun": "^0.2020.1235"
+    "@types/jest": "^27.0.3",
+    "gun": "^0.2020.1235",
+    "jest": "^27.4.5",
+    "ts-jest": "^27.1.2",
+    "typescript": "^4.5.4"
   },
   "devDependencies": {
     "@types/gun": "^0.9.3"
