--- a/package.json
+++ b/package.json
@@ -26,6 +26,9 @@
   "dependencies": {
     "@types/jest": "^27.0.3",
     "csvtojson": "^2.0.10",
+    "graphology": "^0.23.2",
+    "graphology-neo4j": "^1.2.0",
+    "graphology-operators": "^1.5.0",
     "gun": "^0.2020.1235",
     "jest": "^27.4.5",
     "request": "^2.88.2",
@@ -34,6 +37,7 @@
   },
   "devDependencies": {
     "@types/gun": "^0.9.3",
-    "@types/request": "^2.48.7"
+    "@types/request": "^2.48.7",
+    "graphology-types": "^0.23.0"
   }
 }
